--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -31,8 +31,88 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/txtRegType"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/are_you_a_author"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="5dp"/>
+
+                    <RadioGroup
+                        android:id="@+id/rgRegType"
+                        android:textSize="13sp"
+                        android:textStyle="normal"
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+
+                        <com.google.android.material.radiobutton.MaterialRadioButton
+                            android:id="@+id/rbAttend"
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/attendee"
+                            android:layout_marginEnd="20dp"
+                            android:checked="true"/>
+
+                        <com.google.android.material.radiobutton.MaterialRadioButton
+                            android:id="@+id/rbAuthor"
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:checked="false"
+                            android:text="@string/author" />
+
+                        <com.google.android.material.radiobutton.MaterialRadioButton
+                            android:id="@+id/rbCoAuthor"
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:checked="false"
+                            android:text="@string/coauthor" />
+
+                    </RadioGroup>
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/txtIsAbstractSubmission"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/are_you_submitting_an_abstract"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="5dp"/>
+
+                    <RadioGroup
+                        android:id="@+id/rgIsAbstractSubmission"
+                        android:textSize="13sp"
+                        android:textStyle="normal"
+                        android:layout_width="match_parent"
+                        android:visibility="gone"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+
+                        <com.google.android.material.radiobutton.MaterialRadioButton
+                            android:id="@+id/rbIsAbstractYes"
+                            android:layout_height="match_parent"
+                            android:layout_width="110dp"
+                            android:layout_marginEnd="20dp"
+                            android:checked="false"
+                            android:text="@string/is_abstract_yes" />
+
+                        <com.google.android.material.radiobutton.MaterialRadioButton
+                            android:id="@+id/rbIsAbstractNo"
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/is_abstract_no"
+                            android:checked="true"/>
+
+                    </RadioGroup>
+
+
+
+
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                        android:id="@+id/drpDownConference"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
@@ -52,6 +132,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/layoutTitle"
                         android:hint="@string/research_proposal_title"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
@@ -62,6 +143,7 @@
                         app:boxStrokeWidth="1dp"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
+                        android:visibility="gone"
                         android:layout_height="wrap_content">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -83,6 +165,7 @@
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="10dp"
                             android:layout_marginEnd="5dp"
+                            android:visibility="gone"
                             android:hint="@string/select_conference_theme">
 
                             <AutoCompleteTextView
@@ -97,6 +180,7 @@
                         </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/layoutAbstractBody"
                         android:hint="@string/type_research_abstract_here"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
@@ -107,6 +191,7 @@
                         app:boxStrokeWidth="1dp"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
+                        android:visibility="gone"
                         android:layout_height="wrap_content">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -129,21 +214,24 @@
                         android:layout_marginEnd="62dp"
                         android:elevation="0dp"
                         android:gravity="center"
-                        android:drawableLeft="@drawable/ic_baseline_attach_file_24"
+                        android:drawableStart="@drawable/ic_baseline_attach_file_24"
                         android:text="@string/upload_abstract_instead"
                         android:textAllCaps="false"
                         android:textColor="@color/textColor"
                         android:textSize="14sp"
                         app:backgroundTint="@color/grey"
+                        android:visibility="gone"
                         app:shapeAppearanceOverlay="@style/Button5" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                        android:id="@+id/layoutCoAuthors"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="5dp"
+                        android:visibility="gone"
                         android:hint="@string/select_your_co_authors">
 
                         <AutoCompleteTextView
